fixed spacing in form & adjusted col width

--- a/css/styles.css
+++ b/css/styles.css
@@ -93,10 +93,23 @@ h3 {
     text-align: center;
 }
 
+form {
+    margin-top: -1em;
+}
+
+.form-group {
+    margin-bottom: 0.45rem; 
+}
+
 .btn {
     display: block;
+    margin-top: 2rem;
     margin-left: auto;
     margin-right: auto;
+}
+
+.btn-primary{
+
 }
 
 button {
